--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <html lang="en">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<style>
+    .waving {
+        content: '\&#127996';
+    }
 
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renan's Website</title>
 </head>
 <body>
+    <div id="profile-img">
+        <h3>Hey! </h3><icon class="waving"></icon>
+        <img src="images\3.jpg" alt="Profile_img" class="rounded-circle">
+    </div>
     
 </body>
 </html>
