--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <style>
+    .profile-img{
+       height: 150px;
+    }
+
+    a {
+    color:#000000 !important;
+    text-decoration:none;
+}
 
 </style>
 <head>
@@ -10,10 +18,16 @@
     <title>Renan's Website</title>
 </head>
 <body>
-    <div id="profile-img d-inline">
-        <p></p>&#127996;</p>
-        <h3>Hey! </h3>
-        <img src="images\3.jpg" alt="Profile_img" class="rounded-circle">
+    <div id="profileDiv" class="d-flex justify-content-center align-items-center mt-5">
+        <h1 class="h-150 p-2">&#128075;</h1>
+        <h2 class="pr-4">Hey!</h2>
+        <img src="images\3.jpeg" alt="Profile_img" class="profile-img img-fluid img-thumbnail rounded-circle">
+    </div>
+
+    <div id="buttons" class="d-flex justify-content-center align-items-center mt-5">
+        <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#">Currículo</a></h5></button>
+        <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#">Contato</a></h5></button>
+        <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#">Sobre Min</a></h5></button>
     </div>
     
 </body>
