--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="buttons" class="d-flex justify-content-center align-items-center mt-5">
         <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#">Currículo</a></h5></button>
         <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#">Contato</a></h5></button>
-        <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#">Sobre Min</a></h5></button>
+        <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#">Sobre Mim</a></h5></button>
     </div>
     
 </body>
