--- a/index.html
+++ b/index.html
@@ -51,22 +51,33 @@
     </div>
 
     <div id="curriculum" class="d-block bg-light mt-5 p-2">
-        <h3 class="text-center">Currículo<button onClick="startDownload()" class="btn btn-outline-success text-right ml-5 font-weight-normal" data-toggle="tooltip" data-placement="bottom" title="CV em Português" >
+        <h3 class="text-center">Currículo<button onClick="startDownloadPT()" class="btn btn-outline-success text-right ml-5 font-weight-normal" data-toggle="tooltip" data-placement="bottom" title="CV em Português" >
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
                 <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
               </svg><img class="ml-2 flag " src="images\BR-Brazil-Flag-icon.png"></img>
-        </button></h3>
+        </button>
+        <button onClick="startDownloadEN()" class="btn btn-outline-success text-right ml-5 font-weight-normal" data-toggle="tooltip" data-placement="bottom" title="CV em Inglês" >
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+                <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+              </svg><img class="ml-2 flag " src="images\USA_Flag.png"></img>
+        </button></h3></h3>
         
         <h5>Experiências</h5>
 
     </div>
 <script type="text/javascript">  
-        function startDownload()  
+        function startDownloadPT()  
         {  
              var url='https://github.com/rgoes2/rgoes2.github.io/blob/main/images/3_rengoes_portuguese.pdf';    
              window.open(url, 'Download');  
-        }  
+        } 
+        function startDownloadEN()  
+        {  
+             var url='https://github.com/rgoes2/rgoes2.github.io/blob/main/images/3_rengoes_portuguese.pdf';    
+             window.open(url, 'Download');  
+        }   
 
 </script>
 </body>
