--- a/index.html
+++ b/index.html
@@ -16,8 +16,30 @@
     margin-right: 15%;
 }
 .flag{
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2.5em;
+    height: 2.5em;
+}
+.flag2{
+    width: 3em;
+    height: 2.5em;
+}
+
+@media screen and (max-width: 750px) {
+    .flag{
+    width: 1.5em;
+    height: 1.5em;
+}
+.flag2{
+    width: 1.75em;
+    height: 1.5em;
+}
+
+}
+
+#curriculum{
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 </style>
@@ -26,7 +48,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renan's Website</title>
 </head>
-<body>
+<body class="bg-white ">
     <div id="profileDiv" class="d-flex justify-content-center flex-column flex-md-row flex-lg-row align-items-center mt-5">
         <h1 class="h-150 p-2">&#128075;</h1>
         <h2 class="pr-4">Hey!</h2>
@@ -35,11 +57,11 @@
 
     <div id="buttons" class="d-flex justify-content-center align-items-center mt-4">
         <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#curriculum">Currículo</a></h5></button>
-        <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#">Contato</a></h5></button>
+        <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#contact">Contato</a></h5></button>
         <!-- <button type="button" class="btn btn-light p-4 m-1"><h5><a href="#">Sobre Mim</a></h5></button> -->
     </div>
 
-    <div id="aboutme" class="d-block bg-light mt-2 p-2">
+    <div id="aboutme" class="d-block bg-light mt-2 p-2 rounded">
         <h5 class="text-center">Sobre mim</h5>
         <p class="text-left">Tenho 26 anos, Engenheiro de Telecomunicações. Conto com experiência internacional pois estudei Engenharia, realizei pesquisas e cursei MBA em Gerência de Tecnologia de Informações nos Estados Unidos.</p>
         <h5 class="text-center">O que procuro?</h5>
@@ -50,34 +72,29 @@
         </p>
     </div>
 
-    <div id="curriculum" class="d-block bg-light mt-5 p-2">
-        <h3 class="text-center">Currículo<button onClick="startDownloadPT()" class="btn btn-outline-success text-right ml-5 font-weight-normal" data-toggle="tooltip" data-placement="bottom" title="CV em Português" >
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+    <div id="curriculum" class="bg-light mt-5 p-2 text-center rounded">
+        <h3 class="d-inline-block">Currículo </h3>
+        <button class="btn btn-outline-success ml-1 font-weight-normal d-inline-block" data-toggle="tooltip" data-placement="bottom" title="CV em Português" >
+            <a href="https://github.com/rgoes2/rgoes2.github.io/raw/main/images/3_rengoes_portuguese.pdf" download><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
                 <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
-              </svg><img class="ml-2 flag " src="images\BR-Brazil-Flag-icon.png"></img>
+              </svg><img class="ml-2 flag " src="images\BR-Brazil-Flag-icon.png"></img></a>
         </button>
-        <button onClick="startDownloadEN()" class="btn btn-outline-success text-right ml-5 font-weight-normal" data-toggle="tooltip" data-placement="bottom" title="CV em Inglês" >
-            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <button class="btn btn-outline-success ml-1 font-weight-normal d-inline-block" data-toggle="tooltip" data-placement="bottom" title="CV em Inglês" >
+            <a href="https://github.com/rgoes2/rgoes2.github.io/raw/main/images/3_rengoes_english.pdf" download><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
                 <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
-              </svg><img class="ml-2 flag " src="images\USA_Flag.png"></img>
-        </button></h3></h3>
-        
-        <h5>Experiências</h5>
+              </svg><img class="ml-2 flag2 " src="images\USA_Flag.png"></img></a>
+            </button>
 
     </div>
+
+    <div id="contact" class="bg-light mt-5 p2 text-center rounded">
+        <h3>Contato</h3>
+        <!-- I need to include e-mail here and probably linkedin  --> 
+    </div>
 <script type="text/javascript">  
-        function startDownloadPT()  
-        {  
-             var url='https://github.com/rgoes2/rgoes2.github.io/blob/main/images/3_rengoes_portuguese.pdf';    
-             window.open(url, 'Download');  
-        } 
-        function startDownloadEN()  
-        {  
-             var url='https://github.com/rgoes2/rgoes2.github.io/blob/main/images/3_rengoes_portuguese.pdf';    
-             window.open(url, 'Download');  
-        }   
+
 
 </script>
 </body>
