--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
               </svg><img class="ml-2 flag2 " src="images\USA_Flag.png"></img></a>
             </button>
 
-    </div>
+      <!--  </div>
 
-    <div id="contact" class="bg-light mt-5 p2 text-center rounded">
+  <div id="contact" class="bg-light mt-5 p2 text-center rounded">
         <h3>Contato</h3>
-        <!-- I need to include e-mail here and probably linkedin  --> 
-    </div>
+       I need to include e-mail here and probably linkedin  
+    </div> --> 
 <script type="text/javascript">  
 
 
