--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@ span.wave {
         <div class="text-center text-light bg-secondary border border-light rounded p-2">
             <h3 class="d-inline-block ">Currículo </h3>
             <button class="btn btn-outline-success ml-1 font-weight-normal d-inline-block" data-toggle="tooltip" data-placement="bottom" title="CV em Português" >
-                <a href="{{ https://github.com/rgoes2/rgoes2.github.io/main }}/pdf/3_rengoes_portuguese.pdf" download><svg width="1em" height="1em" viewBox="0 0 16 16" class=" text-light bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://docs.google.com/viewer?url=https://github.com/rgoes2/rgoes2.github.io/raw/main/pdf/3_rengoes_portuguese.pdf" download><svg width="1em" height="1em" viewBox="0 0 16 16" class=" text-light bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
                     <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
                 </svg><img class="ml-2 flag " src="images\BR-Brazil-Flag-icon.png"></img></a>
             </button>
             <button class="btn btn-outline-danger ml-1 font-weight-normal d-inline-block" data-toggle="tooltip" data-placement="bottom" title="CV em Inglês" >
-                <a href="{{ https://github.com/rgoes2/rgoes2.github.io/main }}/pdf/3_rengoes_english.pdf" download><svg width="1em" height="1em" viewBox="0 0 16 16" class="text-light bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <a href="https://docs.google.com/viewer?url=https://github.com/rgoes2/rgoes2.github.io/raw/main/pdf/3_rengoes_english.pdf" download><svg width="1em" height="1em" viewBox="0 0 16 16" class="text-light bi bi-download" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
                     <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
                 </svg><img class="ml-2 flag2 " src="images\USA_Flag.png"></img></a>
