--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ span.wave {
         <img src="images\3.jpeg" alt="Profile_img" class="profile-img img-fluid img-thumbnail rounded-circle">
     </div>
     <div class="bg-light d-block rounded border border-secondary border-flex-column flex-md-row flex-lg-row  mt-2 w70 pt-2 pb-2">
-        <div id="certifications" class="d-flex justify-content-center align-items-center ">
+        <div id="certifications" class="d-flex justify-content-center align-items-center ml-2 mr-2 ">
             <a href="https://www.scrum.org/certificates/616537"><img src="images\pspoi.png" alt="PSPOI" class="cert-img img-fluid"></a>
-            <h5 class="text-dark flex-md-row flex-lg-row">Professional Scrum Product Owner</h5>
+            <h5 class="text-dark flex-md-row flex-lg-row ">Professional Scrum Product Owner</h5>
         </div>
     </div>
 
