--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ span.wave {
         <h5 class="text-center text-light bg-secondary border border-light rounded p-2">Sobre mim</h5>
         <p class="text-left">Tenho 26 anos e sou graduado em Engenharia de Telecomunicações. Possuo mais de três ano de vivência nos Estados Unidos onde estudei Engenharia, na NYIT em Nova Iorque, NY, e cursei MBA em Gerência de Tecnologia de Informações pela Webster Univeristy em Orlando, Fl.</p>
         <h5 class="text-center text-light bg-secondary border border-light rounded p-2">O que procuro?</h5>
-        <p class="text-left">Estou em busca de fazerte de uma organização que utiliza tecnologia para tomada de decisões éticas com o intuito de aprimorar a vida de seus <a class="font-italic">stakeholders</a> e tornar o mundo em um lugar melhor.</p>
+        <p class="text-left">Estou em busca de uma organização que utiliza tecnologia para tomada de decisões éticas com o intuito de aprimorar a vida de seus <a class="font-italic">stakeholders</a> e tornar o mundo em um lugar melhor.</p>
         <h5 class="text-center text-light bg-secondary border border-light rounded p-2">Por que me contratar?</h5>
         <p class="text-left">Como Engenheiro, possuo a versatilidade em aprender novas tecnologias, entedimento fundamental em redes de computadores, sistemas, circuitos elétricos, programação e banco de dados.
             Como estudante de MBA em Gerência de TI, aprendi sobre áreas fundamentais de negócio como: Finanças corpotativas, Marketing, Estatística aplicada, Operações e Logísticas, Gerência de Projetos, entre outros.
